--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <div class="header">
         <h1>RESPONSIVO</h1>
         <input class="input" type="text" placeholder="https://www.wikipedia.org">
-        <p>Input the website to visualize. Click the buttons to hide or display a category</p>
+        <p>Input the website to visualize and press Enter. Click the buttons to hide or display a category</p>
     </div>
 
     <div><button class="btn btn-primary" id="galaxy">Galaxy phones</button></div>
@@ -48,6 +48,9 @@
     <div><button class="btn btn-primary onoff" id="tablet">Tables</button></div>
     <div class="tablet"></div>
 
+    <footer>
+        by <a href="https://github.com/Dan-DH?" target="_blank" rel="noopener">Daniel Diaz</a>
+    </footer>
 </body>
     <script src="./script.js"></script>
 </html>
