--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body class="text-center">
     <template id="tpl">
-        <div class="row d-flex align-items-center">
+        <div class="row d-flex align-items-center rmv">
             <div class="col-12 col-md-12 col-xl-6">
                 <iframe src="" width="" height=""></iframe> 
             </div>
@@ -22,7 +22,7 @@
         </div>
     </template>
     <template id="tpl-t">
-        <div class="row d-flex align-items-center">
+        <div class="row d-flex align-items-center rmv">
             <h5 class="device"></h5>
             <h5 class="wah"></h5>
             <div class="col-12">
@@ -45,7 +45,7 @@
     <div><button class="btn btn-primary onoff" id="iphone">iPhones</button></div>
     <div class="iphone"></div>
 
-    <div><button class="btn btn-primary onoff" id="tablet">Tables</button></div>
+    <div><button class="btn btn-primary onoff" id="tablet">Tablets</button></div>
     <div class="tablet"></div>
 
     <footer>
